# boilerplate-rust-axum

./: .env  .env.example  Cargo.toml  LOGGING.md  README.md  rustfmt.toml
src/: main.rs
src/config/: README.md  database.rs  env.rs  logging.rs  mod.rs
src/db/: mod.rs
src/middleware/: README.md  logger.rs  mod.rs
src/modules/users/controllers/: users_controllers.rs
src/modules/users/dto/: users_dto.rs
src/modules/users/services/: users_services.rs
src/routes/: routes.rs
src/utils/: mod.rs  respons.rs
